// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animationDelay renders 0 1`] = `
Array [
  .c0 {
  -webkit-animation-delay: 0;
  animation-delay: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: 0;
  animation-delay: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: 0;
  animation-delay: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: 0;
  animation-delay: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders function 1`] = `
Array [
  .c0 {
  -webkit-animation-delay: hasnot;
  animation-delay: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: has;
  animation-delay: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: hasnot;
  animation-delay: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: has;
  animation-delay: has;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-animation-delay: invalid.path.1;
  animation-delay: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: invalid.path.1;
  animation-delay: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: invalid.path.1;
  animation-delay: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: invalid.path.1;
  animation-delay: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders negative number 1`] = `
Array [
  .c0 {
  -webkit-animation-delay: -54881;
  animation-delay: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: -54881;
  animation-delay: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: -42365;
  animation-delay: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: -42365;
  animation-delay: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-animation-delay: July;
  animation-delay: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: September;
    animation-delay: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: July;
  animation-delay: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: September;
    animation-delay: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: January;
  animation-delay: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: December;
    animation-delay: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: April;
    animation-delay: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: May;
    animation-delay: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-delay: June;
    animation-delay: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: January;
  animation-delay: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: December;
    animation-delay: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: April;
    animation-delay: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: May;
    animation-delay: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-delay: June;
    animation-delay: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: July;
    animation-delay: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: September;
    animation-delay: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: July;
    animation-delay: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: September;
    animation-delay: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: May;
    animation-delay: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: June;
    animation-delay: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: April;
    animation-delay: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: May;
    animation-delay: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: June;
    animation-delay: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-delay: April;
    animation-delay: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-animation-delay: July;
  animation-delay: July;
}

@media May {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: September;
    animation-delay: September;
  }
}

@media January {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media June {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: July;
  animation-delay: July;
}

@media May {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: September;
    animation-delay: September;
  }
}

@media January {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media June {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: April;
  animation-delay: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: January;
    animation-delay: January;
  }
}

@media January {
  .c0 {
    -webkit-animation-delay: December;
    animation-delay: December;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: April;
    animation-delay: April;
  }
}

@media June {
  .c0 {
    -webkit-animation-delay: May;
    animation-delay: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: April;
  animation-delay: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: January;
    animation-delay: January;
  }
}

@media January {
  .c0 {
    -webkit-animation-delay: December;
    animation-delay: December;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: April;
    animation-delay: April;
  }
}

@media June {
  .c0 {
    -webkit-animation-delay: May;
    animation-delay: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-animation-delay: July;
    animation-delay: July;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media January {
  .c0 {
    -webkit-animation-delay: September;
    animation-delay: September;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media June {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-animation-delay: July;
    animation-delay: July;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media January {
  .c0 {
    -webkit-animation-delay: September;
    animation-delay: September;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: November;
    animation-delay: November;
  }
}

@media June {
  .c0 {
    -webkit-animation-delay: August;
    animation-delay: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-delay: January;
    animation-delay: January;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: December;
    animation-delay: December;
  }
}

@media January {
  .c0 {
    -webkit-animation-delay: April;
    animation-delay: April;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: May;
    animation-delay: May;
  }
}

@media June {
  .c0 {
    -webkit-animation-delay: June;
    animation-delay: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-delay: January;
    animation-delay: January;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: December;
    animation-delay: December;
  }
}

@media January {
  .c0 {
    -webkit-animation-delay: April;
    animation-delay: April;
  }
}

@media April {
  .c0 {
    -webkit-animation-delay: May;
    animation-delay: May;
  }
}

@media June {
  .c0 {
    -webkit-animation-delay: June;
    animation-delay: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-animation-delay: 54881;
  animation-delay: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: 54881;
  animation-delay: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: 42365;
  animation-delay: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: 42365;
  animation-delay: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders string 1`] = `
Array [
  .c0 {
  -webkit-animation-delay: July;
  animation-delay: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: July;
  animation-delay: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: June;
  animation-delay: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: June;
  animation-delay: June;
}

<div
    className="c0"
  />,
]
`;

exports[`animationDelay renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`animationDelay renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-animation-delay: DarkSlateBlue;
  animation-delay: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: DarkSlateBlue;
  animation-delay: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: DarkSlateBlue;
  animation-delay: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-delay: DarkSlateBlue;
  animation-delay: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
